tests/models/enum/unnamed/f32/fail/alias.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(alias = "val")]
        f32
    ),
}
fn main() {}
